# NEATJudge

./: .gitignore  DIAGNOSIS.md  MIGRATION.md  README.md  README_GRATH_NOTES.md  __init__.py  default.yaml  evaluate.py  loaders.py  mutate.py  neat.ini  prompt.py  pyproject.toml  requirements.txt  run_benchmark.py  run_demo.py  run_hetero.py  run_live.py  run_sweep.py  train.py
ablate/: run_ablations.py
config/: default.yaml  neat.ini
data/: bank_index.py  loaders.py  splits.py  truthfulqa_hf.py
docs/: benchmark_hetero.md  benchmark_huge.md  benchmark_huge_haiku.md  benchmark_multiaxis.md  benchmark_results.md  benchmark_sweep.md  live_opus_run.md  live_reflective_run.md
eval/: evaluate_truthfulqa.py
evolution/: eval_mc1.py  train_prompt.py  train_selector.py
judge/: ollama.py
llms/: judge.py  mutate.py
metrics/: truthfulqa.py
model/: fitness.py  metrics.py  mmr.py  prompt.py  prompt_genome.py  selector.py
neatjudge/: __init__.py  archetypes.py  config.py  datasets.py  engine.py  fitness.py  genes.py  genome.py  innovation.py  llm.py  rubric.py  speciation.py  train.py
prompts/: mutation.py
scripts/: debug_mutation.py  eval_truthfulqa.sh  run_ablations.sh  run_eval.sh  run_eval_truthfulqa.sh  run_train.sh  train_neatjudge.sh  train_prompt.sh  train_selector.sh
selector/: features.py  mmr.py  network.py
tests/: test_benchmark.py  test_metrics.py  test_mmr.py  test_model_gene.py  test_multiaxis.py  test_neatjudge.py  test_reflective.py  test_selector.py  test_splits.py  test_truthfulqa_mc1.py
utils/: io.py  logging.py  seed.py
(+27 files in other folders)
